# inFINITE

./: CMakeLists.txt  README.md
UIs/: mainwindow.ui  openmodelform.ui
include/: infinite.h  mainwindow.h  model.h  openmodelform.h  solid3dfilemanager.h
resources/: icons.qrc
resources/models/: beam_2d_v4.fp2d  frame_v3.ff2d  tower_v5.ft3d
source/: infinite.cpp  main.cpp  mainwindow.cpp  model.cpp  openmodelform.cpp  solid3dfilemanager.cpp
